<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="温馨提示"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <com.qmuiteam.qmui.widget.QMUIObservableScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info"/>
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info_1"/>
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info_2"/>
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info_3"/>
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info_4"/>
                <com.qmuiteam.qmui.widget.textview.QMUISpanTouchFixTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:layout_margin="5dp"
                    android:textSize="13sp"
                    android:text="@string/permission_info_5"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/btn_dis"
                        android:layout_width="80dp"
                        android:layout_weight="1"
                        app:qmui_backgroundColor="@drawable/btn_bbb_select"
                        android:text="@string/dialog_cancel"
                        android:gravity="center"
                        app:qmui_radius="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        app:qmui_borderWidth="1px"
                        app:qmui_isRadiusAdjustBounds="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/x36"/>
                    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                        android:id="@+id/btn_ok"
                        android:layout_width="80dp"
                        android:layout_weight="1"
                        android:text="@string/dialog_confirm"
                        android:gravity="center"
                        app:qmui_radius="5dp"
                        app:qmui_isRadiusAdjustBounds="true"
                        app:qmui_backgroundColor="@drawable/btn_ccc_select"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="10dp"
                        app:qmui_borderWidth="1px"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="@dimen/x36"/>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </LinearLayout>
        </com.qmuiteam.qmui.widget.QMUIObservableScrollView>
    </LinearLayout>
</androidx.cardview.widget.CardView>